# src/main/java/com/kalixys/amadeus/api/soap/PaginationMetadata.java
@@ -1,10 +1,0 @@
-package com.kalixys.amadeus.api.soap;
-
-public record PaginationMetadata(
-    int page,
-    int size,
-    int returnedCount,
-    boolean hasNext,
-    String nextCursor
-) {
-}
